Update all product checkout pages + products page with Monero conversion info

--- a/products.html
+++ b/products.html
@@ -52,7 +52,9 @@
             <li>✅ 30W USB power charger</li>
           </ul>
           <p class="mt-4 text-sm text-gray-600">Includes everything you need for a secure start. No ongoing service costs unless you choose to add them.</p>
-          <a href="contact.html" class="mt-6 inline-block bg-black text-white px-4 py-2 rounded-xl text-center hover:bg-gray-800">Buy Now</a>
+          <p class="mt-4 font-bold">$1,400 AUD</p>
+          <p class="text-sm text-gray-600 italic">Payment in Monero (XMR) — converted live at checkout</p>
+          <a href="product1.html" class="mt-6 inline-block bg-black text-white px-4 py-2 rounded-xl text-center hover:bg-gray-800">Buy Now</a>
         </div>
 
         <!-- Anonymous Aussie -->
@@ -69,7 +71,9 @@
             <li>✅ 30W USB power charger</li>
           </ul>
           <p class="mt-4 text-sm text-gray-600">Comes ready-to-use with <strong>10GB anonymous data</strong> and <strong>$10 VoIP credit</strong> included. Future usage is flexible and pay-as-you-go.</p>
-          <a href="contact.html" class="mt-6 inline-block bg-black text-white px-4 py-2 rounded-xl text-center hover:bg-gray-800">Buy Now</a>
+          <p class="mt-4 font-bold">$1,600 AUD</p>
+          <p class="text-sm text-gray-600 italic">Payment in Monero (XMR) — converted live at checkout</p>
+          <a href="product2.html" class="mt-6 inline-block bg-black text-white px-4 py-2 rounded-xl text-center hover:bg-gray-800">Buy Now</a>
         </div>
 
         <!-- Operator Aussie -->
@@ -88,7 +92,9 @@
             <li>✅ 30W USB power charger</li>
           </ul>
           <p class="mt-4 text-sm text-gray-600">Includes <strong>10GB anonymous data</strong> and <strong>$10 VoIP credit</strong>. Ongoing usage is flexible and supported by us.</p>
-          <a href="contact.html" class="mt-6 inline-block bg-black text-white px-4 py-2 rounded-xl text-center hover:bg-gray-800">Buy Now</a>
+          <p class="mt-4 font-bold">$2,500 AUD</p>
+          <p class="text-sm text-gray-600 italic">Payment in Monero (XMR) — converted live at checkout</p>
+          <a href="product3.html" class="mt-6 inline-block bg-black text-white px-4 py-2 rounded-xl text-center hover:bg-gray-800">Buy Now</a>
         </div>
 
         <!-- Sovereign Aussie -->
@@ -108,7 +114,9 @@
             <li>✅ 30W USB power charger</li>
           </ul>
           <p class="mt-4 text-sm text-gray-600">Delivered ready for use with <strong>10GB anonymous data</strong> and <strong>$10 VoIP credit</strong>. Starlink provides flexible subscription options for global connectivity.</p>
-          <a href="contact.html" class="mt-6 inline-block bg-black text-white px-4 py-2 rounded-xl text-center hover:bg-gray-800">Buy Now</a>
+          <p class="mt-4 font-bold">$3,300 AUD</p>
+          <p class="text-sm text-gray-600 italic">Payment in Monero (XMR) — converted live at checkout</p>
+          <a href="product4.html" class="mt-6 inline-block bg-black text-white px-4 py-2 rounded-xl text-center hover:bg-gray-800">Buy Now</a>
         </div>
 
       </div>
