--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>Commsblack Mobile</title>
 
   <!-- Favicons -->
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="48x48" href="favicon-48x48.png">
   <link rel="icon" type="image/png" sizes="64x64" href="favicon-64x64.png">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
   <style>
     body {
