--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
   <title>Commsblack Mobile</title>
 
   <!-- Favicons -->
-  <link rel="icon" href="favicon.ico" sizes="any">
-  <link rel="icon" type="image/svg+xml" href="favicon.svg">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="48x48" href="favicon-48x48.png">
-  <link rel="icon" type="image/png" sizes="64x64" href="favicon-64x64.png">
-  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="favicon.svg?v=3">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png?v=3">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png?v=3">
+  <link rel="icon" type="image/png" sizes="48x48" href="favicon-48x48.png?v=3">
+  <link rel="icon" type="image/png" sizes="64x64" href="favicon-64x64.png?v=3">
+  <link rel="shortcut icon" href="favicon.ico?v=3">
 
   <style>
     body {
