--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <link rel="icon" type="image/png" sizes="64x64" href="favicon-64x64.png?v=3">
   <link rel="shortcut icon" href="favicon.ico?v=3">
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <!-- CSS -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- HEADER -->
@@ -51,36 +51,36 @@
 
     <!-- Desktop nav -->
     <nav>
-      <a href="#Mission">Mission</a>
-      <a href="#Products">Products</a>
-      <a href="#Academy">Academy</a>
-      <a href="#FAQ">FAQ’s</a>
-      <a href="#Contact">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="academy.html">Academy</a>
+      <a href="faqs.html">FAQ’s</a>
+      <a href="contact.html">Contact</a>
     </nav>
 
-    <!-- Hamburger button (mobile only) -->
+    <!-- Mobile menu toggle -->
     <div class="menu-toggle">
       <span></span>
       <span></span>
       <span></span>
     </div>
-
-    <!-- Mobile nav -->
-    <div class="mobile-nav">
-      <a href="#Mission">Mission</a>
-      <a href="#Products">Products</a>
-      <a href="#Academy">Academy</a>
-      <a href="#FAQ">FAQ’s</a>
-      <a href="#Contact">Contact</a>
-    </div>
   </header>
+
+  <!-- Mobile nav -->
+  <div class="mobile-nav">
+    <a href="index.html">Home</a>
+    <a href="products.html">Products</a>
+    <a href="academy.html">Academy</a>
+    <a href="faqs.html">FAQ’s</a>
+    <a href="contact.html">Contact</a>
+  </div>
 
   <!-- HERO -->
   <section class="hero">
     <h1>Private. Secure. Anonymous.</h1>
     <p>Our mission is simple: give people back control of their communications — free from surveillance, exploitation, and unnecessary risk.</p>
     <div class="cta">
-      <a href="#Products">Explore products</a>
+      <a href="products.html">Explore products</a>
     </div>
   </section>
 
@@ -107,11 +107,12 @@
     </div>
   </main>
 
+  <!-- FOOTER -->
   <footer>
     &copy; 2025 Commsblack Mobile. All rights reserved.
   </footer>
 
-  <!-- Scripts -->
-  <script src="assets/js/main.js"></script>
+  <!-- JS -->
+  <script src="main.js"></script>
 </body>
 </html>
