--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     }
     nav a:hover { color: #3A76F0; }
 
-    /* Hamburger button (hidden on desktop) */
+    /* Hamburger button */
     .menu-toggle {
       display: none;
       flex-direction: column;
@@ -78,7 +78,7 @@
       border-radius: 2px;
     }
 
-    /* Mobile menu (hidden by default) */
+    /* Mobile menu */
     .mobile-nav {
       display: none;
       flex-direction: column;
@@ -187,7 +187,7 @@
   <!-- HEADER -->
   <header>
     <div class="logo">
-      <!-- Updated Globe + Padlock Logo -->
+      <!-- Logo -->
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-label="Commsblack Mobile logo">
         <defs>
           <clipPath id="globeClip">
@@ -219,11 +219,11 @@
 
     <!-- Desktop Nav -->
     <nav>
-      <a href="#Mission">Mission</a>
-      <a href="#Products">Products</a>
-      <a href="#Academy">Academy</a>
-      <a href="#FAQ">FAQ’s</a>
-      <a href="#Contact">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="academy.html">Academy</a>
+      <a href="faqs.html">FAQ’s</a>
+      <a href="contact.html">Contact</a>
     </nav>
 
     <!-- Hamburger Button -->
@@ -236,11 +236,11 @@
 
   <!-- Mobile Menu -->
   <div class="mobile-nav" id="mobileNav">
-    <a href="#Mission" onclick="toggleMenu()">Mission</a>
-    <a href="#Products" onclick="toggleMenu()">Products</a>
-    <a href="#Academy" onclick="toggleMenu()">Academy</a>
-    <a href="#FAQ" onclick="toggleMenu()">FAQ’s</a>
-    <a href="#Contact" onclick="toggleMenu()">Contact</a>
+    <a href="index.html" onclick="toggleMenu()">Home</a>
+    <a href="products.html" onclick="toggleMenu()">Products</a>
+    <a href="academy.html" onclick="toggleMenu()">Academy</a>
+    <a href="faqs.html" onclick="toggleMenu()">FAQ’s</a>
+    <a href="contact.html" onclick="toggleMenu()">Contact</a>
   </div>
 
   <!-- HERO -->
@@ -248,7 +248,7 @@
     <h1>Private. Secure. Anonymous.</h1>
     <p>Our mission is simple: give people back control of their communications — free from surveillance, exploitation, and unnecessary risk.</p>
     <div class="cta">
-      <a href="#Products">Explore products</a>
+      <a href="products.html">Explore products</a>
     </div>
   </section>
 
