--- a/products.html
+++ b/products.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -219,11 +219,11 @@
 
     <!-- Desktop Nav -->
     <nav>
-      <a href="#Mission">Mission</a>
-      <a href="#Products">Products</a>
-      <a href="#Academy">Academy</a>
-      <a href="#FAQ">FAQ’s</a>
-      <a href="#Contact">Contact</a>
+      <a href="mission.html">Mission</a>
+      <a href="products.html">Products</a>
+      <a href="academy.html">Academy</a>
+      <a href="faqs.html">FAQ’s</a>
+      <a href="contact.html">Contact</a>
     </nav>
 
     <!-- Hamburger Button -->
@@ -236,11 +236,11 @@
 
   <!-- Mobile Menu -->
   <div class="mobile-nav" id="mobileNav">
-    <a href="#Mission" onclick="toggleMenu()">Mission</a>
-    <a href="#Products" onclick="toggleMenu()">Products</a>
-    <a href="#Academy" onclick="toggleMenu()">Academy</a>
-    <a href="#FAQ" onclick="toggleMenu()">FAQ’s</a>
-    <a href="#Contact" onclick="toggleMenu()">Contact</a>
+    <a href="mission.html" onclick="toggleMenu()">Mission</a>
+    <a href="products.html" onclick="toggleMenu()">Products</a>
+    <a href="academy.html" onclick="toggleMenu()">Academy</a>
+    <a href="faqs.html" onclick="toggleMenu()">FAQ’s</a>
+    <a href="contact.html" onclick="toggleMenu()">Contact</a>
   </div>
 
   <!-- HERO -->
@@ -248,28 +248,28 @@
     <h1>Private. Secure. Anonymous.</h1>
     <p>Our mission is simple: give people back control of their communications — free from surveillance, exploitation, and unnecessary risk.</p>
     <div class="cta">
-      <a href="#Products">Explore products</a>
+      <a href="products.html">Explore products</a>
     </div>
   </section>
 
   <!-- MAIN CONTENT -->
   <main>
-    <div class="topic" id="Mission">
+    <div class="topic">
       <h3>Why we exist</h3>
       <p>Big Tech and telecom providers profit from your data. Governments and third parties track your movements and communications. We exist to give you back control — with tools that protect your personal freedom, digital identity, and ability to connect on your own terms.</p>
     </div>
 
-    <div class="topic" id="Products">
+    <div class="topic">
       <h3>What we offer</h3>
       <p>We build communication kits that combine hardened GrapheneOS phones, privacy hardware, and anonymous services. They are designed for simple everyday privacy, sovereign global connectivity, and seamless use at home, in travel, or off-grid.</p>
     </div>
 
-    <div class="topic" id="Who">
+    <div class="topic">
       <h3>Who it’s for</h3>
       <p>Commsblack Mobile is for everyday users who value privacy, professionals handling sensitive information, travelers and global citizens, and anyone tired of being the product in the surveillance economy.</p>
     </div>
 
-    <div class="topic" id="Difference">
+    <div class="topic">
       <h3>The Commsblack difference</h3>
       <p>No unnecessary apps, bloat, or trackers. Anonymous and secure by default. Transparent about third-party service costs. Simple, ready-to-use packages with data included. Ongoing support to help you recharge or manage services easily.</p>
     </div>
