--- a/faqs.html
+++ b/faqs.html
@@ -188,7 +188,7 @@
       <div class="logo-text"><span class="black">Commsblack</span><span class="blue">Mobile</span></div>
     </div>
     <nav>
-      <a href="index.html#Mission">Mission</a>
+      <a href="index.html">Home</a>
       <a href="products.html">Products</a>
       <a href="academy.html">Academy</a>
       <a href="faqs.html">FAQ’s</a>
@@ -199,7 +199,7 @@
 
   <!-- Mobile Menu -->
   <div class="mobile-nav" id="mobileNav">
-    <a href="index.html#Mission" onclick="toggleMenu()">Mission</a>
+    <a href="index.html" onclick="toggleMenu()">Home</a>
     <a href="products.html" onclick="toggleMenu()">Products</a>
     <a href="academy.html" onclick="toggleMenu()">Academy</a>
     <a href="faqs.html" onclick="toggleMenu()">FAQ’s</a>
