--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact | Commsblack</title>
 
-  <!-- Favicons (same as index.html) -->
+  <!-- Favicons -->
   <link rel="icon" type="image/svg+xml" href="favicon.svg?v=4">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png?v=4">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png?v=4">
@@ -199,7 +199,7 @@
       <div class="logo-text"><span class="black">Commsblack</span><span class="blue">Mobile</span></div>
     </div>
     <nav>
-      <a href="index.html#Mission">Mission</a>
+      <a href="index.html">Mission</a>
       <a href="products.html">Products</a>
       <a href="academy.html">Academy</a>
       <a href="faqs.html">FAQ’s</a>
@@ -209,7 +209,7 @@
   </header>
 
   <div class="mobile-nav" id="mobileNav">
-    <a href="index.html#Mission" onclick="toggleMenu()">Mission</a>
+    <a href="index.html" onclick="toggleMenu()">Mission</a>
     <a href="products.html" onclick="toggleMenu()">Products</a>
     <a href="academy.html" onclick="toggleMenu()">Academy</a>
     <a href="faqs.html" onclick="toggleMenu()">FAQ’s</a>
@@ -222,9 +222,9 @@
     <p>For privacy and security, Commsblack only accepts contact via Signal.</p>
 
     <div class="contact-card">
-      <!-- Signal Logo -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="currentColor">
-        <path d="M256 32C132.3 32 32 132.3 32 256c0 52.9 17.3 101.7 46.6 141.2L64 480l82.8-14.7C183.5 484.7 219 496 256 496c123.7 0 224-100.3 224-224S379.7 32 256 32z"/>
+      <!-- Official Signal Logo -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 96" fill="currentColor">
+        <path d="M48 0C21.5 0 0 21.5 0 48c0 9.1 2.6 17.6 7.1 24.8L3.5 92.3c-.5 2 1.3 3.8 3.3 3.3l19.5-3.6C33.8 92.9 40.7 96 48 96c26.5 0 48-21.5 48-48S74.5 0 48 0zM48 88c-7.4 0-14.3-2.4-19.8-6.4l-1.2-.9-13.1 2.4 2.4-13.1-1-1.2C10.4 63.3 8 56.4 8 48 8 25.9 25.9 8 48 8s40 17.9 40 40-17.9 40-40 40z"/>
       </svg>
       <h2>Signal Handle</h2>
       <p>@commsblack.10</p>
@@ -236,7 +236,7 @@
     &copy; 2025 Commsblack Mobile. All rights reserved.
   </footer>
 
-  <!-- Use one shared script across ALL pages -->
+  <!-- Shared JS -->
   <script src="main.js"></script>
 </body>
 </html>
