--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <!-- header.html -->
 <header>
   <div class="logo">
-    <!-- Globe + Padlock Logo (from index.html) -->
+    <!-- Globe + Padlock Logo -->
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-label="Commsblack Mobile logo">
       <defs>
         <clipPath id="globeClip">
@@ -33,7 +33,7 @@
 
   <!-- Desktop Nav -->
   <nav>
-    <a href="index.html">Home</a>
+    <a href="index.html">Mission</a>
     <a href="products.html">Products</a>
     <a href="academy.html">Academy</a>
     <a href="faqs.html">FAQ’s</a>
@@ -50,7 +50,7 @@
 
 <!-- Mobile Nav -->
 <div class="mobile-nav" id="mobileNav">
-  <a href="index.html" onclick="toggleMenu()">Home</a>
+  <a href="index.html" onclick="toggleMenu()">Mission</a>
   <a href="products.html" onclick="toggleMenu()">Products</a>
   <a href="academy.html" onclick="toggleMenu()">Academy</a>
   <a href="faqs.html" onclick="toggleMenu()">FAQ’s</a>
