--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
   <!-- Mobile Menu -->
   <div class="mobile-nav" id="mobileNav">
-    <a href="index.html" onclick="toggleMenu()">Home</a>
+    <a href="index.html" onclick="toggleMenu()">Mission</a>
     <a href="products.html" onclick="toggleMenu()">Products</a>
     <a href="academy.html" onclick="toggleMenu()">Academy</a>
     <a href="faqs.html" onclick="toggleMenu()">FAQ’s</a>
