--- a/products.html
+++ b/products.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Commsblack Mobile</title>
+  <title>Commsblack Mobile - Products</title>
 
   <!-- Favicons -->
   <link rel="icon" type="image/svg+xml" href="favicon.svg?v=4">
@@ -187,7 +187,7 @@
   <!-- HEADER -->
   <header>
     <div class="logo">
-      <!-- Updated Globe + Padlock Logo -->
+      <!-- Globe + Padlock Logo -->
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-label="Commsblack Mobile logo">
         <defs>
           <clipPath id="globeClip">
@@ -199,10 +199,8 @@
             .lock-shackle { stroke:#000; stroke-width:2.5; fill:none; stroke-linecap:round; stroke-linejoin:round }
           </style>
         </defs>
-        <!-- Padlock -->
         <rect x="18" y="28" width="28" height="20" rx="3" ry="3" class="lock-body"/>
         <path d="M20 28 v-3 a12 12 0 0 1 24 0 v3" class="lock-shackle"/>
-        <!-- Globe -->
         <g class="globe" clip-path="url(#globeClip)">
           <line x1="-6" y1="32" x2="70" y2="32"/>
           <line x1="32" y1="-6" x2="32" y2="70"/>
@@ -219,7 +217,7 @@
 
     <!-- Desktop Nav -->
     <nav>
-      <a href="mission.html">Mission</a>
+      <a href="index.html">Mission</a>
       <a href="products.html">Products</a>
       <a href="academy.html">Academy</a>
       <a href="faqs.html">FAQ’s</a>
@@ -236,7 +234,7 @@
 
   <!-- Mobile Menu -->
   <div class="mobile-nav" id="mobileNav">
-    <a href="mission.html" onclick="toggleMenu()">Mission</a>
+    <a href="index.html" onclick="toggleMenu()">Mission</a>
     <a href="products.html" onclick="toggleMenu()">Products</a>
     <a href="academy.html" onclick="toggleMenu()">Academy</a>
     <a href="faqs.html" onclick="toggleMenu()">FAQ’s</a>
@@ -245,33 +243,35 @@
 
   <!-- HERO -->
   <section class="hero">
-    <h1>Private. Secure. Anonymous.</h1>
-    <p>Our mission is simple: give people back control of their communications — free from surveillance, exploitation, and unnecessary risk.</p>
-    <div class="cta">
-      <a href="products.html">Explore products</a>
-    </div>
+    <h1>Our Products</h1>
+    <p>Explore our communication kits, phones, and privacy tools designed for secure, anonymous, and reliable connectivity.</p>
   </section>
 
   <!-- MAIN CONTENT -->
   <main>
     <div class="topic">
-      <h3>Why we exist</h3>
-      <p>Big Tech and telecom providers profit from your data. Governments and third parties track your movements and communications. We exist to give you back control — with tools that protect your personal freedom, digital identity, and ability to connect on your own terms.</p>
-    </div>
-
-    <div class="topic">
-      <h3>What we offer</h3>
+      <h3>Product Overview</h3>
       <p>We build communication kits that combine hardened GrapheneOS phones, privacy hardware, and anonymous services. They are designed for simple everyday privacy, sovereign global connectivity, and seamless use at home, in travel, or off-grid.</p>
     </div>
 
     <div class="topic">
-      <h3>Who it’s for</h3>
-      <p>Commsblack Mobile is for everyday users who value privacy, professionals handling sensitive information, travelers and global citizens, and anyone tired of being the product in the surveillance economy.</p>
+      <h3>Product 1</h3>
+      <p>Placeholder description for Product 1.</p>
     </div>
 
     <div class="topic">
-      <h3>The Commsblack difference</h3>
-      <p>No unnecessary apps, bloat, or trackers. Anonymous and secure by default. Transparent about third-party service costs. Simple, ready-to-use packages with data included. Ongoing support to help you recharge or manage services easily.</p>
+      <h3>Product 2</h3>
+      <p>Placeholder description for Product 2.</p>
+    </div>
+
+    <div class="topic">
+      <h3>Product 3</h3>
+      <p>Placeholder description for Product 3.</p>
+    </div>
+
+    <div class="topic">
+      <h3>Product 4</h3>
+      <p>Placeholder description for Product 4.</p>
     </div>
   </main>
 
