--- a/faqs.html
+++ b/faqs.html
@@ -163,7 +163,7 @@
   <!-- HEADER -->
   <header>
     <div class="logo">
-      <!-- Same Globe + Padlock Logo -->
+      <!-- Globe + Padlock Logo -->
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-label="Commsblack Mobile logo">
         <defs>
           <clipPath id="globeClip">
@@ -188,22 +188,22 @@
       <div class="logo-text"><span class="black">Commsblack</span><span class="blue">Mobile</span></div>
     </div>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html">Mission</a>
       <a href="products.html">Products</a>
       <a href="academy.html">Academy</a>
       <a href="faqs.html">FAQ’s</a>
       <a href="contact.html">Contact</a>
     </nav>
-    <div class="menu-toggle" onclick="toggleMenu()"><span></span><span></span><span></span></div>
+    <div class="menu-toggle"><span></span><span></span><span></span></div>
   </header>
 
   <!-- Mobile Menu -->
   <div class="mobile-nav" id="mobileNav">
-    <a href="index.html" onclick="toggleMenu()">Home</a>
-    <a href="products.html" onclick="toggleMenu()">Products</a>
-    <a href="academy.html" onclick="toggleMenu()">Academy</a>
-    <a href="faqs.html" onclick="toggleMenu()">FAQ’s</a>
-    <a href="contact.html" onclick="toggleMenu()">Contact</a>
+    <a href="index.html">Mission</a>
+    <a href="products.html">Products</a>
+    <a href="academy.html">Academy</a>
+    <a href="faqs.html">FAQ’s</a>
+    <a href="contact.html">Contact</a>
   </div>
 
   <!-- HERO -->
@@ -263,11 +263,7 @@
     © 2025 Commsblack Mobile. All rights reserved.
   </footer>
 
-  <script>
-    function toggleMenu(){
-      const nav=document.getElementById("mobileNav");
-      nav.style.display = nav.style.display==="flex"?"none":"flex";
-    }
-  </script>
+  <!-- Shared JS -->
+  <script src="main.js"></script>
 </body>
 </html>
